examples/good/15-05-tuples.elina
fn getFromTup(ref a: int, tupleValue: tuple<int, tuple<bool, string>>): void {
  var b: bool;
  var c: string;
  <a, <b, c>> = tupleValue;
}

var globTuple: tuple<int, tuple<bool, string>> = [21, [false, "Dummy"]];

fn main(): void {
  var intValue: int = 12;
  printInt(intValue);

  getFromTup(intValue, globTuple);
  printInt(intValue);
}