examples/bad/empty-tuple.elina
fn main(): void {
  var emptyTuple: tuple<string, tuple<tuple<int, tuple<>>>>;
}